2001-09-24  Gerd Moellmann  <gerd@gnu.org>

	* process.c (sigchld_handler) [LINUX]: Don't return from
	the signal handler at the end of the loop.

2001-09-21  Gerd Moellmann  <gerd@gnu.org>

	* sysdep.c (wait_for_termination) [POSIX_SIGNALS]: Terminate
	only if kill returns -1, and errno is ESRCH.

2001-09-21  Markus Rost  <rost@math.ohio-state.edu>

	* Makefile.in (shortlisp): Add ../lisp/env.elc.

2001-09-20  Gerd Moellmann  <gerd@gnu.org>

	* process.c (sigchld_handler): Use GC_CONSP, GC_INTEGERP, GC_EQ
	since this function can be called during GC.

	* callproc.c (Fcall_process): Handle errors from pipe(2).
	(child_setup): Delete code in #ifdef vipc.

2001-09-19  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (decode_mode_spec): Add parameter MULTIBYTE.
	(display_mode_element): Display the string from decode_mode_spec
	depending on its multibyteness.

	* s/netbsd.h (LD_SWITCH_SYSTEM, C_SWITCH_SYSTEM): Add /usr/pkg.

	* m/macppc.h (DATA_SEG_BITS): Also define for GCC 3.

2001-09-18  Gerd Moellmann  <gerd@gnu.org>

	* keyboard.c (Frecursive_edit): Pass (BUFFER . SINGLE-KBOARD) to
	recursive_edit_unwind.
	(recursive_edit_unwind): Set kboard state according to
	SINGLE-KBOARD.

	* buffer.c (modify_overlay): Don't do nothing if START == END;
	This can still be a modification, for example when an overlay has
	a before-string or after-string.
	(Fdelete_overlay): Prevent redisplay optimizations when deleting
	an overlay with before-string or after-string.

	* s/netbsd.h (C_SWITCH_SYSTEM): Add.
	(LD_SWITCH_SYSTEM): Include /usr/local/lib.

	* xdisp.c (try_window_id) [!GLYPH_DEBUG]: Give up if
	first_unchanged_at_end_row is in front of
	last_unchanged_at_beg_row.  This code should be removed after the
	release of 21.1.

2001-09-17  Gerd Moellmann  <gerd@gnu.org>

	* buffer.h (BUF_COMPUTE_UNCHANGED): Use BUF_MODIFF and
	BUF_OVERLAY_MODIFF instead of MODIFF and OVERLAY_MODIFF.

	* m/macppc.h (DATA_SEG_BITS) [__linux__]: Define for GCC
	versions >= 2.95.
